--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
     <header>
 
       <h1>Welcome to My Website!</h1>
+      
+      <nav>
+	<a href="index.html">Home</a>
+	<a href="about.html">About</a>
+	<a href="contact.html">Contact</a>
+      </nav>
 
 </header>
 
@@ -38,6 +44,17 @@
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
 
 </main>
+<main class="container my-5">
+    <div class="row">
+       <h2>Welcome to My Website!</h2>
+       <p>This is a simple webpage hosted on GitHub Pages.</p>
+       <p>Here's a picture of a cute cat:</p>
+       <img src="https://placekitten.com/200/300"alt="A cute kitten" class="img-fluid rounded">
+       <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
+    </div>
+    <div class="col-md-4">
+   
+	     
 
 
 <footer>
