--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
        <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
     </div>
     <div class="col-md-4">
+       <div class="
    
 	     
 
