--- a/index.html
+++ b/index.html
@@ -53,11 +53,16 @@
        <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
     </div>
     <div class="col-md-4">
-       <div class="
+       <div class="card-md-4">
+	   <div class="card-body">
+              <h5 class="card-title">Did You Know?</h5>
+              <p class="card-text">GitHub Pages is a free service to host static websites directly from your GitHub repository.</p>
+           </div>
+       </div>
+    </div>
+ </div
+</main>
    
-	     
-
-
 <footer>
 
 <p>&copy; 2025 Your Name</p>
