--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,10 @@
 
 
    <main>
+    
+     <main class="container my-5">
+
+     <h2>Contact Me</h2>
 
      <p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
 
