--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 
     <p>This is a simple webpage hosted on GitHub Pages.</p>
 
-    <p>Here's a picture of a cute cat:</p>
-	<img src="https://placekitten.com/200/300" alt="A cute kitten">
+    <p>Here's a picture of a motorcycle:</p>
+	
+	<img src="BANNER.jpg" alt="SpeedStar Motors Banner">
 
 
 <p>Visit <a href="https://github.com">GitHub</a> to learn more about coding.</p>
