--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div class="row">
        <h2>Welcome to My Website!</h2>
        <p>This is a simple webpage hosted on GitHub Pages.</p>
-       <p>Here's a picture of a cute cat:</p>
-       <img src="https://placekitten.com/200/300"alt="A cute kitten" class="img-fluid rounded">
+       <p>Here's a picture of a car:</p>
+       <img src="BANNER.jpg" alt="SpeedStar Motors">
        <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
     </div>
     <div class="col-md-4">
