--- a/contact.html
+++ b/contact.html
@@ -87,14 +87,14 @@
 
      <h2>Contact Me</h2>
 
-     <p>If you'd like to get in touch, feel free to email me at <a href="mailto:example@example.com">example@example.com</a>.</p>
+     <p>If you'd like to get in touch, feel free to email me at <a href="Bida24-311@thuto.bac.ac.bw">Bida24-311@thuto.bac.ac.bw</a>.</p>
 
    </main>
 
 
    <footer>
 
-     <p>&copy; 2025 Your Name</p>
+     <p>&copy; 2025 Aone Olaotse</p>
 
    </footer>
 
