--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="row">
        <h2>Welcome to My Website!</h2>
        <p>This is a simple webpage hosted on GitHub Pages.</p>
-       <p>Here's a picture of a car:</p>
+       <p>Here's a picture of a guy riding a motorcycle:</p>
        <img src="BANNER.jpg" alt="SpeedStar Motors">
        <p class="mt-3">Visit <a href="https://github.com" class="btn btn-primary">GitHub</a> to learn more about coding.</p>
     </div>
