--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
 <body>
 
-
-</header>    
+  </header>    
 
       <h1>Welcome to My Website!</h1>
       
@@ -54,7 +53,7 @@
    
 <footer>
 
-<p>&copy; 2025 Your Name</p>
+<p>&copy; 2025 Aone Olaotse</p>
 
 </footer>
 
